# Compress

./: .gitignore  EVALUATION.md  LICENSE  README.md  benchmark.py  pyproject.toml  stress_test.py
structdist/: __init__.py  core.py  formats.py  merge.py
tests/: test_core.py
