[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structdist"
version = "0.1.0"
description = "Algebraic Edit Distance — a universal metric on structured data that reduces to Levenshtein on strings"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "NagusameCS"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
    "Typing :: Typed",
]
keywords = [
    "edit-distance", "levenshtein", "structural-diff", "json-diff",
    "metric", "algebraic-data-types", "merge", "patch",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/NagusameCS/structdist"
Repository = "https://github.com/NagusameCS/structdist"
Issues = "https://github.com/NagusameCS/structdist/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["structdist*"]
